--- a/Full website.html
+++ b/Full website.html
@@ -8,6 +8,8 @@
  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <title>CARES - Goa</title>
+       <!-- Amit & Aditi style css -->
+       <link rel="stylesheet" href="Amit&Aditi.css">
       <link rel="stylesheet" href="header-footer-css/latest.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -64,7 +66,36 @@
 
          </div>
          </div>
-
+      <!-- ******************* Amit & Aditi Code starts STARTS HERE *************************-->
+      <body>
+      <div class="container mt-5">
+          <!-- header Classes -->
+          <div class="header">
+              <p class="h1 text" >Coding is like Poetry. Precise & Concise..</p>
+              <p class="h2 text">It's not a real Bug so don't be scared.</p>
+              <p class="h3 text">Code is like humour.</p>
+          </div>
+          <!-- Display Classes -->
+          <div class="body"> <h1 class="display-1 ">Welcome to CARES GOA</h1>
+              <h1 class="display-2 ">Coding is Fun</h1>
+              <h1 class="display-2 ">Lets Code.</h1>
+              <h1 class="display-2 ">It is going to be so much of Fun</h1>
+          </div>
+          <!-- lead / text-muted -->
+          <div class="lead">
+              <p class="lead text">As leaders in education, our job is not to control those whom we serve, but to unleash their talent. ... </p>
+              <!-- bold / italic -->
+              <p class="lead text">I am an Innovator</p>
+              <p class="lead  text">I am a Coder.</p>
+              <hr>
+              <h1 class="display-3 text ">Welcome to the AI learning.</h1>
+              <p class="lead text">Coding tests a variety of abilities. It hones problem-solving and analysis skills, such as finding errors and thinking logically. Further, coding often helps people develop teamwork and interpersonal skills since software and application projects are often cross-disciplinary and collaborative. </p>
+          </div>
+      </div>
+      <!-- ******************* Amit & Aditi Code ENDS HERE *************************-->
+      <!-- Bootstrap JS files -->
+      <script src="bootstrap/js/mdb.min.js"></script>
+      </body>
 <!--- Start ur content here-->
 
          pppppppjkhghfdgfdsefszx
