--- a/header-banner-testimonials-footer/index.html
+++ b/header-banner-testimonials-footer/index.html
@@ -8,118 +8,190 @@
  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <title>CARES - Goa</title>
-       <!-- Amit & Aditi style css -->
-       <link rel="stylesheet" href="Amit&Aditi.css">
       <link rel="stylesheet" href="header-footer-css/latest.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="latest.css">
+  <link rel="stylesheet" href="header-footer-css/latest.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  
+  
+  <link rel="stylesheet" href= "aboutUs-T7-css/bootstrap.css">
+        <link rel="stylesheet" href= "aboutUs-T7-css/mdb.css">
+        <link rel="stylesheet" href= "aboutUs-T7-css/aboutus-T7.css">
+        <link rel="stylesheet" href= "header-footer-css/style1.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+        <link rel="stylesheet" href= "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <!-- Aditi & Amit -->
+  <!-- Amit & Aditi style css -->
+  <link rel="stylesheet" href="Amit&Aditi.css">
+  <link rel="stylesheet" href="header-footer-css/latest.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  
+  <!-- Testimonial - Start  -->
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;500;600;700&display=swap" rel="stylesheet">
+
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   
+   <link rel="stylesheet" href="testimonials-css/testimonials-style.css">
+   <!-- Testimonial - End -->
+
+
    </head>
+
+
 
 
 
    <body>
 
-      <div class= "container">
-         <div class="row">
-            <div class="col">
-               <nav>
-                  <label class="logo"> <img src="header-footer-img/logo.png" width="250" height="100"/> </label>
-                  <ul>
-                     <li><a class="active" href="#">Home</a></li>
-                     <li>
-                        <a href="#">About Us
-                        <i class="fas fa-caret-down"></i>
-                        </a>
-                        <ul>
-                           <li><a href="#">About Scheme</a></li>
-                           <li><a href="#">Know our Team</a></li>
-                        </ul>
-                     </li>
-                     <li>
-                        <a href="#">Resources
-                        <i class="fas fa-caret-down"></i>
-                        </a>
-                        <ul>
-                           <li><a href="#">Join Us</a></li>
-                           <li><a href="#">Recruitment</a></li>
-                       <li><a href="#">CARES Innovation</a></li>
-                       <li><a href="#">Revised ICT Curriculum</a></li>
-                       <li><a href="#">Class VI Regular</a></li>
-                       <li><a href="#">Class VI Elective</a></li>
-                       <li><a href="#">Class VII Regular</a></li>
-                       <li><a href="#">Student-Teacher Creativity</a></li>
-                        </ul>
-                     </li>
-                     <li><a href="#">Gallery</a></li>
-                     <li><a href="#">Tenders</a></li>
-                  <li><a href="#">FAQ</a></li>
-                  <li><a href="#">Help Desk</a></li>
-                  <li><a href="#">Contact Us</a></li>
-                  </ul>
-               </nav>
+      <section class="header">
+         <div class= "container">
+            <div class="row">
+               <div class="col-3">
+                 
+                     <img src="header-footer-img/logo.png" class="logoimg"/>
+                     </nav>
+                     </div>
+                     <div class="col-9">
+                       <nav>
+                     <ul>
+                        <li><a class="active" href="#">Home</a></li>
+                        <li>
+                           <a href="#">About Us
+                           <i class="fas fa-caret-down"></i>
+                           </a>
+                           <ul>
+                              <li><a href="#">About Scheme</a></li>
+                              <li><a href="#">Know our Team</a></li>
+                           </ul>
+                        </li>
+                        <li>
+                           <a href="#">Resources
+                           <i class="fas fa-caret-down"></i>
+                           </a>
+                           <ul>
+                              <li><a href="#">Join Us</a></li>
+                              <li><a href="#">Recruitment</a></li>
+                          <li><a href="#">CARES Innovation</a></li>
+                          <li><a href="#">Revised ICT Curriculum</a></li>
+                          <li><a href="#">Class VI Regular</a></li>
+                          <li><a href="#">Class VI Elective</a></li>
+                          <li><a href="#">Class VII Regular</a></li>
+                          <li><a href="#">Student-Teacher Creativity</a></li>
+                           </ul>
+                        </li>
+                        <li><a href="#">Gallery</a></li>
+                        <li><a href="#">Tenders</a></li>
+                     <li><a href="#">FAQ</a></li>
+                     <li><a href="#">Help Desk</a></li>
+                     <li><a href="#">Contact Us</a></li>
+                     </ul>
+                  </nav>
+               </div>
+   
+   
             </div>
+            </div>
+      </section>
 
-
-         </div>
-         </div>
-      <!-- ******************* Amit & Aditi Code starts STARTS HERE *************************-->
-      <body>
-      <div class="container mt-5">
-          <!-- header Classes -->
-          <div class="header">
-              <p class="h1 text" >Coding is like Poetry. Precise & Concise..</p>
-              <p class="h2 text">It's not a real Bug so don't be scared.</p>
-              <p class="h3 text">Code is like humour.</p>
-          </div>
-          <!-- Display Classes -->
-          <div class="body"> <h1 class="display-1 ">Welcome to CARES GOA</h1>
-              <h1 class="display-2 ">Coding is Fun</h1>
-              <h1 class="display-2 ">Lets Code.</h1>
-              <h1 class="display-2 ">It is going to be so much of Fun</h1>
-          </div>
-          <!-- lead / text-muted -->
-          <div class="lead">
-              <p class="lead text">As leaders in education, our job is not to control those whom we serve, but to unleash their talent. ... </p>
-              <!-- bold / italic -->
-              <p class="lead text">I am an Innovator</p>
-              <p class="lead  text">I am a Coder.</p>
-              <hr>
-              <h1 class="display-3 text ">Welcome to the AI learning.</h1>
-              <p class="lead text">Coding tests a variety of abilities. It hones problem-solving and analysis skills, such as finding errors and thinking logically. Further, coding often helps people develop teamwork and interpersonal skills since software and application projects are often cross-disciplinary and collaborative. </p>
-          </div>
-      </div>
-      <!-- ******************* Amit & Aditi Code ENDS HERE *************************-->
-      <!-- Bootstrap JS files -->
-      <script src="bootstrap/js/mdb.min.js"></script>
-      </body>
 <!--- Start ur content here-->
 
-         pppppppjkhghfdgfdsefszx
+<!-- Banner -->
+<!-- ******************* Amit & Aditi Code starts STARTS HERE *************************-->
 
-         pppppppjkhghfdgfdsefszxpppppppjkhghfdgfdsefszxpppppppjkhghfdgfdsefszxpppppppjkhghfdgfdsefszxpppppppjkhghfdgfdsefszxpppppppjkhghfdgfdsefszxpppppppjkhghfdgfdsefszxpppppppjkhghfdgfdsefszxpppppppjkhghfdgfdsefszx
+  <div class="container mt-5">
+      <!-- header Classes -->
+      <div class="header">
+          <p class="h1 text" >Coding is like Poetry. Precise & Concise..</p>
+          <p class="h2 text">It's not a real Bug so don't be scared.</p>
+          <p class="h3 text">Code is like humour.</p>
+      </div>
+      <!-- Display Classes -->
+      <div class="body"> <h1 class="display-1 ">Welcome to CARES GOA</h1>
+          <h1 class="display-2 ">Coding is Fun</h1>
+          <h1 class="display-2 ">Lets Code.</h1>
+          <h1 class="display-2 ">It is going to be so much of Fun</h1>
+      </div>
+      <!-- lead / text-muted -->
+      <div class="lead">
+          <p class="lead text">As leaders in education, our job is not to control those whom we serve, but to unleash their talent. ... </p>
+          <!-- bold / italic -->
+          <p class="lead text">I am an Innovator</p>
+          <p class="lead  text">I am a Coder.</p>
+          <hr>
+          <h1 class="display-3 text ">Welcome to the AI learning.</h1>
+          <p class="lead text">Coding tests a variety of abilities. It hones problem-solving and analysis skills, such as finding errors and thinking logically. Further, coding often helps people develop teamwork and interpersonal skills since software and application projects are often cross-disciplinary and collaborative. </p>
+      </div>
+  </div>
+  <!-- ******************* Amit & Aditi Code ENDS HERE *************************-->
+  <!-- Bootstrap JS files -->
+  <script src="bootstrap/js/mdb.min.js"></script>
+ 
 
 
 
-         pppppppjkhghfdgfdsefszx
-         pppppppjkhghfdgfdsefszx
-         pppppppjkhghfdgfdsefszx
-         pppppppjkhghfdgfdsefszx
-         pppppppjkhghfdgfdsefszx
-         pppppppjkhghfdgfdsefszx
-         pppppppjkhghfdgfdsefszx
-         pppppppjkhghfdgfdsefszx
-         pppppppjkhghfdgfdsefszx
-         pppppppjkhghfdgfdsefszx
-         pppppppjkhghfdgfdsefszx
-         
-<!--- End ur content here-->
 
 
-<!-- -------------------------------------------------------------------------------------------------------------------------------------------------->
+
+
+
+
+<!--Beginning of Testimonial Section - Edited by: Ms. Siddhi -->
+<section class="reviews">
+   <h1>What our Students say??</h1>
+   <p>Its best to hear from our learners about ICT Elective Curriculum...</p>
+
+   <div class="row">
+       <div class="reviews-col">
+           <img src="testimonials-images/student1.jpeg">
+           <div>
+               <p>Coding is fun as I can design whatever I want .. may it be a Game or an Image...</p>
+               <h3>Daksh Naik</h3>
+               <i class="fa fa-star"></i>
+               <i class="fa fa-star"></i>
+               <i class="fa fa-star"></i>
+               <i class="fa fa-star"></i>
+               <!-- <i class="fa fa-star"></i> -->
+               <!-- <i class="fa fa-star-half"></i> -->
+               <i class="fa fa-star-half-o"></i>
+           </div>
+       </div>
+       <div class="reviews-col">
+           <img src="testimonials-images/student2.jpeg">
+           <div>
+               <p>Its fascinating to see computer predicting if I am happy or sad...</p>
+               <h3>Preeti Pandit</h3>
+               <i class="fa fa-star"></i>
+               <i class="fa fa-star"></i>
+               <i class="fa fa-star"></i>
+               <i class="fa fa-star"></i>
+               <i class="fa fa-star-o"></i>
+           </div>
+       </div>
+   </div>
+
+</section>
+<!--End of Testimonial Section - Edited by: Ms. Siddhi -->
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -128,7 +200,7 @@
 <!--- START OF WEBSITE FOOTER ; APPENDED BY "SOMANATH AND NEETI".-->
 
 
-<footer>
+<footer class="footer">
 
 
 <div class="container p-5 my-5 bg-dark text-white">
@@ -207,6 +279,15 @@
 
 <!-- END OF WEBSITE FOOTER UPDATION BY "SOMANATH AND NEETI" -->
 
+
+
+
+<!--BOOTSTRAP JS FILES-->
+<script src="aboutus-T7-js/jquery.js"></script>
+<script src="aboutus-T7-js/popper.js"></script>
+<script src="aboutus-T7-js/jquery.js"></script>
+<script src="aboutus-T7-js/mdb.js"></script>
+<script src="aboutus-T7-js/AboutUs.js"></script>
 
 
 </body>
