--- a/full-website/finalwebsite.html
+++ b/full-website/finalwebsite.html
@@ -258,7 +258,7 @@
 <div class="col">
 <ul>
 <h4> <b>ORGANIZATION</b></h4>
-<li><a href="#">About us.</a></li>
+<li><a href="aboutscheme.html">About us.</a></li>
 <li><a href="#"> Mission.</a></li>
 <li><a href="#">Know the scheme.</a></li>
 </ul>
