--- a/full-website/finalwebsite.html
+++ b/full-website/finalwebsite.html
@@ -296,7 +296,7 @@
 <div class="col">
 <ul>
 <h4><b>ADDRESS</b></h4>
-<li><a href="#">NITTTR Extension Center Goa, Alto Porvorim, Penha de França, Goa 403521.</a></li>
+<li><a href="https://www.google.com/maps/dir/15.493586,73.8301434/GRGH%2BCJ4+NITTTR,+Porvorim,+Penha+de+Fran%C3%A7a,+Goa+403501/@15.5085953,73.8178368,14z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x3bbfc06d69841a6f:0xfb55e64f56e12264!2m2!1d73.828978!2d15.5260012">NITTTR Extension Center Goa, Alto Porvorim, Penha de França, Goa 403521.</a></li>
 </ul>
 </div>
 <div class="col">
